--- a/src/main/resources/Common/UI/Custom/Pages/DifficultySelection.html
+++ b/src/main/resources/Common/UI/Custom/Pages/DifficultySelection.html
@@ -46,14 +46,14 @@
                                                 <div style="background-image:url('{{$imagePath}}'); anchor-width: 248; anchor-height: 248;"></div>
                                             </div>
                                             <p>Tier details:</p>
-                                            <p style="color:#ffffff">Difficulty: <b>{{$displayName}}</b></p>
-                                            <p style="color:#e74c3c">Health: <b>{{$maxHealth}}</b></p>
-                                            <p style="color:#e67e22">Damage: <b>{{$baseDamage}}</b></p>
-                                            <p style="color:#95a5a6">Armor: <b>{{$armor}}</b></p>
-                                            <p style="color:#f1c40f">XP/Cash: <b>{{$xp}}/{{$cash}}</b></p>
-                                            <p style="color:#1abc9c">Drop-Rate: <b>{{$dropRate}}</b></p>
-                                            <p style="color:#3498db">Drop-Amount: <b>{{$dropQuantity}}</b></p>
-                                            <p style="color:#9b59b6">Drop-Quality: <b>{{$dropQuality}}</b></p>
+                                            <p style="color:#ffffff">Difficulty: {{$displayName}}</p>
+                                            <p style="color:#e74c3c">Health: {{$maxHealth}}</p>
+                                            <p style="color:#e67e22">Damage: {{$baseDamage}}</p>
+                                            <p style="color:#95a5a6">Armor: {{$armor}}</p>
+                                            <p style="color:#f1c40f">XP/Cash: {{$xp}}/{{$cash}}</p>
+                                            <p style="color:#1abc9c">Drop-Rate: {{$dropRate}}</p>
+                                            <p style="color:#3498db">Drop-Amount: {{$dropQuantity}}</p>
+                                            <p style="color:#9b59b6">Drop-Quality: {{$dropQuality}}</p>
                                             {{#if currentTierId == tierId}}
                                             <div style="border:2px solid #95a5a677; background-color: #e67e2277; anchor-width: 260; anchor-top: 8; padding:6px; align-items: center; justify-content: center">
                                                 <p style="text-align:center;">Currently selected</p>
