--- a/src/main/resources/Common/UI/Custom/Pages/DifficultyBadge.html
+++ b/src/main/resources/Common/UI/Custom/Pages/DifficultyBadge.html
@@ -1,1 +1,2 @@
-<div style="background-image:url('{{$badgeImagePath}}'); anchor-top: 10; anchor-right: 10; anchor-width: 64; anchor-height: 64;"></div>
+<div style="background-image:url('{{$badgeImagePath}}'); anchor-top: 10; anchor-right: 11; anchor-width: 72; anchor-height: 72;"></div>
+<div style="background-image:url('{{$tierScopeLabel}}'); anchor-top: 82; anchor-right: {{$tierScopeLabelRightCorrection}};  anchor-width: 80; anchor-height: 20;"></div>
